--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <!-- main template css file -->
     <link rel="stylesheet" href="css/leon.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <!-- font awesome -->
 <link rel="stylesheet" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <i class="fa-solid fa-house"></i>
+    <i class="fa-solid fa-camera-retro" aria-hidden="true"></i>
 </body>
 </html>
